src/common/components/ArticleDetails.scss
@import '../styles/colors';

.article-details_d2vnmv > .content > .title > .star_n3lkaj {
	float: right;
	margin-left: 8px;
}
.article-details_d2vnmv > .content > .title > .share-control_mnbspk {
	float: right;
	// the bookmark with a % has some right-margin already
	margin-left: 2px;
	> .children > .icon_rour3d {
		color: #858585;
	}
}
.article-details_d2vnmv > .content > .title > .bookmark {
	position: relative;
	float: right;
	margin-top: -10px;
}
.article-details_d2vnmv > .content > .title > .bookmark > .percent-complete {
	font-family: 'Museo Sans (500)';
	font-size: 8pt;
	position: absolute;
	top: 12px;
	transform: translateX(-50%);
	left: 50%;
	z-index: 1;
}
.article-details_d2vnmv > .content > .title > .bookmark > .icon_rour3d {
	display: block;
	width: 42px;
	height: 42px;
}
.article-details_d2vnmv > .content > .title > .title-link {
	font-family: 'Cambria (bold)';
	font-size: 16pt;
	text-decoration: none;
	line-height: 1em;
	word-break: break-word;
}
.article-details_d2vnmv > .content > .columns {
	display: flex;
}
.article-details_d2vnmv > .content > .columns > .star-container {
	flex: 0 0 auto;
	width: 20px;
	margin-right: 5px;
}

.article-details_d2vnmv > .content > .columns > .article {
	flex: 1 1 auto;
}
.article-details_d2vnmv > .content > .columns > .article > .meta {
	margin-top: 5px;
	font-family: 'Museo Sans (300)';
	font-size: 11pt;
}
// TODO: 'spacer' should be defined somewhere globally, it is reused
.article-details_d2vnmv > .content > .columns > .article > .meta > .spacer {
	margin: 0 5px;
}
.article-details_d2vnmv > .content > .columns > .article > .meta > .spacer::before {
	content: "•";
}
.article-details_d2vnmv > .content > .columns > .article > .stats {
	display: flex;
	align-items: center;
	height: 22px;
	margin-top: 5px;
	font-family: 'Museo Sans (500)';
	font-size: 12pt;
}
.article-details_d2vnmv > .content > .columns > .article > .stats > .reads,
.article-details_d2vnmv > .content > .columns > .article > .stats > .comments {
	margin-right: 10px;
}
.article-details_d2vnmv > .content > .columns > .article > .stats > .popover_r7v81v {
	flex: 0 0 auto;
}
.article-details_d2vnmv > .content > .columns > .article > .stats > .popover_r7v81v + .popover_r7v81v {
	margin-left: 10px;
}
.article-details_d2vnmv > .content > .columns > .article > .stats > .share-control_mnbspk > .children > .icon_rour3d {
	font-size: 16px;
}
.article-details_d2vnmv > .content > .columns > .small-stats-article {
	display: none;
}
.article-details_d2vnmv > .content > .columns > .post {
	flex: 0 0 auto;
	display: flex;
	flex-flow: column;
	justify-content: flex-end;
	align-items: flex-end;
	margin-left: 5px;
}

@media (max-width: 449px) {
	.article-details_d2vnmv > .content > .title {
		margin-bottom: 2px;
	}
	.article-details_d2vnmv > .content > .columns > .star-container,
	.article-details_d2vnmv > .content > .columns > .article {
		display: none;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article {
		flex: 1 1 auto;
		display: flex;
		flex-flow: column;
		min-width: 0;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta {
		flex: 0 0 auto;
		font-family: 'Museo Sans (300)';
		font-size: 11pt;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .publisher,
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length {
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length {
		display: flex;
		margin-top: 1px;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length > .author {
		min-width: 0;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length > .spacer {
		flex: 0 0 auto;
		width: 10px;
		text-align: center;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length > .spacer::before {
		content: "|";
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length > .date,
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length > .length {
		flex: 0 0 auto;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .stats {
		flex: 0 0 auto;
		display: flex;
		align-items: center;
		margin-top: 2px;
		font-family: 'Museo Sans (500)';
		font-size: 11pt;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .stats > .reads,
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .stats > .comments {
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		margin-right: 5px;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .stats > .reads,
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .stats > .popover_r7v81v {
		flex: 0 0 auto;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .stats > .popover_r7v81v + .popover_r7v81v {
		margin-left: 5px;
	}
	.article-details_d2vnmv > .content > .columns > .small-stats-article > .stats > .share-control_mnbspk > .children > .icon_rour3d {
		font-size: 16px;
	}
}

@include theme using ($root, $scheme) {
	#{$root} .article-details_d2vnmv > .content > .title > .bookmark > .percent-complete {
		@include theme-colors(
			$scheme,
			(
				"color": $intent-text-color
			)
		);
	}
	#{$root} .article-details_d2vnmv > .content > .title > .bookmark > .icon_rour3d,
	#{$root} .article-details_d2vnmv > .content > .columns > .article > .meta > .spacer,
	#{$root} .article-details_d2vnmv > .content > .columns > .article > .stats > .share-control_mnbspk > .children > .icon_rour3d,
	#{$root} .article-details_d2vnmv > .content > .columns > .small-stats-article > .meta > .author-date-length > .spacer,
	#{$root} .article-details_d2vnmv > .content > .columns > .small-stats-article > .stats > .share-control_mnbspk > .children > .icon_rour3d {
		@include theme-colors(
			$scheme,
			(
				"color": $intent-neutral-color
			)
		);
	}
}

